# expect-test-bytes

./: Cargo.toml  README.md
src/: lib.rs  tests.rs
src/test_data/: fails_different.ansi  fails_missing.ansi
